compiler/tests/pass/path_keywords/main.afns
package kernel.main;

import kernel.vga;
import ui.window;

fn main() -> i32 {
    return 0;
}
