compiler/tests/fail/circular_import/main.afns
package cyc.a;

import cyc.b;

fn main() -> i32 {
    return 0;
}
